# InfSeqExt

./: .gitignore  .travis-ci.sh  .travis.yml  Makefile  README.md  _CoqProject  build-quick.sh  classical.v  configure  coq-inf-seq-ext.opam  default.nix  descr  dune-project  exteq.v  infseq.v  infseq_aux.v  map.v  meta.yml  modal_op_classic.v  opam  subseq.v  url
.github/workflows/: coq-ci.yml  docker-action.yml
theories/: dune  infseq.v
