opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/DistributedComponents/InfSeqExt"
dev-repo: "git+https://github.com/DistributedComponents/InfSeqExt.git"
bug-reports: "https://github.com/DistributedComponents/InfSeqExt/issues"
license: "Unknown"

synopsis: "Coq library for reasoning inductively and coinductively on infinite sequences"
description: """
Coq library for reasoning inductively and coinductively on infinite sequences,
using modal operators similar to those in linear temporal logic (LTL)."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.4"}
  "coq" {(>= "8.7" & < "8.12~") | (= "dev")}
]

tags: [
  "category:Mathematics/Logic/Modal logic"
  "keyword:temporal logic"
  "keyword:infinite transition systems"
  "keyword:coinduction"
  "logpath:InfSeqExt"
]
authors: [
  "Yuxin Deng"
  "Jean-Francois Monin"
  "Karl Palmskog"
  "Ryan Doenges"
]
